# ai-melt-research-pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: settings.yaml
docs/: run_stage_00_validation.sh
notebooks/legacy/: 00_corpus_ingestion.ipynb  00_corpus_ingestion_viz.ipynb  01_primary_metaphor.ipynb  01_primary_metaphor_viz.ipynb  02_conventionalisation.ipynb  02_conventionalisation_viz.ipynb  03_scenarios.ipynb  03_scenarios_viz.ipynb  04_metaphor_regimes.ipynb  04_metaphor_regimes_viz.ipynb  05_cultural_narrative.ipynb  05_cultural_narrative_viz.ipynb
scripts/: 00_ingest_corpus.py  00_visualise_corpus.py  01_process_primary_metaphors.py  01_visualise_primary_metaphors.py  02_compute_conventionalisation.py  03_build_scenarios.py  04_build_regimes.py  05_synthesise_cultural_narratives.py
src/ai_melt/: config.py  conventionalisation.py  corpus.py  narratives.py  paths.py  pipeline.py  primary_metaphors.py  regimes.py  scenarios.py  visualisation.py
src/ai_melt_research_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_corpus.py  test_primary_metaphors.py  test_project_setup.py  test_stage_00_cli.py  test_visualisation.py
