[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-melt-research-pipeline"
version = "0.1.0"
description = "Research pipeline for the computational operationalisation of the MELT model."
authors = [
    { name = "María Isabel Marín-Morales" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "networkx",
    "matplotlib",
    "plotly",
    "pyyaml",
    "jupyter",
    "ipykernel",
    "openpyxl",
    "pyarrow",
    "tqdm"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
    "pre-commit",
    "nbstripout"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
